--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "date-fns": "^2.28.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-calendars": "^1.1276.0",
     "react-native-get-random-values": "^1.7.2",
+    "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-vector-icons": "^9.0.0",
